# openai-websearch-mcp

./: LICENSE  README.md  pyproject.toml
docs/: client_configuration.md  openai-websearch-tool.md
src/mcp_openai_websearch/: __init__.py  __main__.py  server.py
src/openai_websearch_mcp/: __init__.py  __main__.py  cli.py  server.py
