[project]
name = "mcp-openai-websearch"
version = "0.1.5"
description = "using openai websearch as mcp server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic_extra_types==2.10.3",
    "pydantic==2.10.6",
    "mcp==1.3.0",
    "tzdata==2025.1",
    "openai==1.66.2"
]


[project.scripts]
mcp-openai-websearch = "mcp_openai_websearch:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pydantic_extra_types==2.10.3",
    "pydantic==2.10.6",
    "mcp==1.3.0",
    "tzdata==2025.1",
    "openai==1.66.2"
]
