[project]
name = "openai-websearch-mcp"
version = "0.4.0"
description = "using openai websearch as mcp server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic_extra_types==2.10.3",
    "pydantic==2.10.6",
    "mcp==1.3.0",
    "tzdata==2025.1",
    "openai==1.66.2",
    "typer==0.15.2"
]


[project.scripts]
openai-websearch-mcp = "openai_websearch_mcp:main"
openai-websearch-mcp-install = "openai_websearch_mcp.cli:app"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pydantic_extra_types==2.10.3",
    "pydantic==2.10.6",
    "mcp==1.3.0",
    "tzdata==2025.1",
    "openai==1.66.2",
    "typer==0.15.2"
]
